--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "nosql-easy",
   "version": "0.1.0",
   "description": "This library aims to facilitate access to a non-relational database",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "jest --detectOpenHandles"
+    "test": "DB_DIALECT=Firestore jest --detectOpenHandles",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,6 @@
     "@types/jest": "^26.0.5",
     "jest": "^26.1.0",
     "jest-cli": "^26.1.0",
-    "nodemon": "^2.0.4",
     "ts-jest": "^26.1.3",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
