--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
-node_modules
+# dependencies
+/node_modules
+/.vscode
+
+# testing
+/coverage
+
+# production
+/build
+/lib
+
+# misc
+.DS_Store
 .env
-lib
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# lock
+package-lock.json
+yarn.lock
