--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/3Tecnos-Development/nosql-easy#readme",
   "devDependencies": {
+    "@firebase/firestore-types": "^1.13.0",
     "@types/jest": "^26.0.5",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
