--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,8 @@
-name: Lint
+name: Lint & Test
 on:
   pull_request:
     branches:
       - master
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,3 +15,4 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm run lint
+      - run: npm run test
