--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,10 @@ jobs:
         uses: actions/checkout@v2.3.1
       - name: Node
         uses: actions/setup-node@v2.1.1
+        env:
+          DB_DIALECT: ${{ secrets.DB_DIALECT }}
+          FIRESTORE_CREDENTIAL: ${{secrets.FIRESTORE_CREDENTIAL}}
+          AWS_CREDENTIAL: ${{secrets.AWS_CREDENTIAL}}
         with:
           node-version: 12
       - run: npm ci
