--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,9 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-        env:
-          DB_DIALECT: ${{ secrets.DB_DIALECT }}
-          FIRESTORE_CREDENTIAL: ${{secrets.FIRESTORE_CREDENTIAL}}
-          AWS_CREDENTIAL: ${{secrets.AWS_CREDENTIAL}}
       - run: npm run lint
+      #  env:
+      #    DB_DIALECT: ${{ secrets.DB_DIALECT }}
+      #    FIRESTORE_CREDENTIAL: ${{secrets.FIRESTORE_CREDENTIAL}}
+      #    AWS_CREDENTIAL: ${{secrets.AWS_CREDENTIAL}}
       # - run: npm run test
