--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "jest --detectOpenHandles --verbose",
     "build": "tsc",
     "lint": "eslint --ext .ts,.js src",
     "lint:fix": "eslint --fix . --max-warnings=0 --ext .ts,.js src"
